--- a/Outdoor-Kitchens.html
+++ b/Outdoor-Kitchens.html
@@ -188,6 +188,135 @@
     </section>
 
 
+
+    <section class="py-5">
+        <div class="container">
+            <div class="display-5 fw-bold text-uppercase text-black text-center mb-3">Frequently asked questions</div>
+            <div class="col-md-7 mx-auto d-block">
+
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item shadow border my-3">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed fw-semibold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true"
+                                aria-controls="flush-collapseOne">
+                                1. Do you offer different brands of appliances?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Yes, we are certified dealers for six different outdoor kitchen appliance brands. We
+                                sell and display appliances from Blaze, Bull, Fire Magic, ProFire, True Flame, Primo
+                                Grills, and more.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item shadow border my-3">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed fw-semibold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="true"
+                                aria-controls="flush-collapseTwo">
+                                2. What are your outdoor kitchen frames made of?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Our frames are custom-welded aluminum, ensuring a rust-free, durable, and solid
+                                structure.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item shadow border my-3">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed fw-semibold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="true"
+                                aria-controls="flush-collapseThree">
+                                3. Do you include granite installation, electrical work, and plumbing?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Yes, we handle the entire project, including granite installation, electrical work, and
+                                plumbing. Just like with our pergolas, there's no need to hire additional contractors.
+                                We deliver fully functional outdoor kitchens ready for use, managing everything from
+                                start to finish.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item shadow border my-3">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed fw-semibold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="true"
+                                aria-controls="flush-collapseFour">
+                                4. Are your kitchens customizable or do you offer standard modules?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseFour" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Our kitchens are fully customizable to meet your needs, measurements, and design
+                                preferences. We offer single counters, cooking counters with islands, L-shaped kitchens,
+                                and U-shaped kitchens.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item shadow border my-3">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed fw-semibold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="true"
+                                aria-controls="flush-collapseFive">
+                                5. Do you offer 3D designs for outdoor kitchens?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseFive" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Yes, we provide 3D design services to help you visualize your outdoor kitchen before
+                                construction begins. This ensures your design is tailored perfectly to your space and
+                                needs.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item shadow border my-3">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed fw-semibold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="true"
+                                aria-controls="flush-collapseSix">
+                                6. What countertop materials do you offer?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseSix" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                We offer a variety of high-quality countertop materials, including granite, quartz, and
+                                other durable options that can withstand outdoor conditions
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item shadow border my-3">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed fw-semibold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="true"
+                                aria-controls="flush-collapseSeven">
+                                7. How long does it take to install an outdoor kitchen?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseSeven" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Outdoor kitchen installation typically takes about 2-3 weeks, depending on the
+                                complexity of the design and additional features requested.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="py-5 bg-light">
 
         <div class="text-black text-center fw-bold fs-1 pb-5">Contact Our Team</div>
