--- a/Project-Gallery.html
+++ b/Project-Gallery.html
@@ -46,15 +46,22 @@
                                     aria-expanded="false" aria-label="Toggle navigation"></i>
                             </li>
                             <div class="dropdown">
-                                <li class="nav-item " type="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    <a class="nav-link px-0 text-white aria-current=" href="Peroglas.html">Pergolas <i class="ri-arrow-down-s-fill"></i></a>
+                                <li class="nav-item " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link px-0 text-white aria-current=" href="Peroglas.html">Pergolas <i
+                                            class="ri-arrow-down-s-fill"></i></a>
                                 </li>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item py-2 fs-sm" href="Modern-Wall-Mounted-Pergolas.html">Modern Wall Mounted Pergolas</a></li>
-                                    <li><a class="dropdown-item py-2 fs-sm" href="Most-Modern-Free-Standing.html">Most Modern Free Standing</a></li>
-                                    <li><a class="dropdown-item py-2 fs-sm" href="Mounted-Pergolas-on-Brackets.html">Mounted Pergolas on Brackets</a></li>
-                                    <li><a class="dropdown-item py-2 fs-sm" href="Plain-Modern-Free-Standing-Pergolas.html">Plain Modern Free Standing Pergolas</a></li>
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Modern-Wall-Mounted-Pergolas.html">Modern Wall Mounted Pergolas</a>
+                                    </li>
+                                    <li><a class="dropdown-item py-2 fs-sm" href="Most-Modern-Free-Standing.html">Most
+                                            Modern Free Standing</a></li>
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Mounted-Pergolas-on-Brackets.html">Mounted Pergolas on Brackets</a>
+                                    </li>
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Plain-Modern-Free-Standing-Pergolas.html">Plain Modern Free Standing
+                                            Pergolas</a></li>
                                 </ul>
                             </div>
                             <li class="nav-item">
@@ -194,30 +201,13 @@
                             <button class="accordion-button collapsed fw-semibold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true"
                                 aria-controls="flush-collapseOne">
-                                1. What types of pergolas do you offer?
+                                1. How long do the pergolas last?
                             </button>
                         </h2>
                         <div id="flush-collapseOne" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                We offer four distinct types of pergolas to suit different needs and preferences:
-
-                                <li class="my-3"><b>Insulated Aluminum Pergolas:</b> Durable, weather-resistant, and
-                                    low-maintenance, these
-                                    pergolas provide a modern aesthetic and superior insulation.
-                                </li>
-                                <li class="my-3"><b>Freestanding Pergolas:</b> Versatile and elegant,
-                                    these stand-alone structures can be placed anywhere in your outdoor space, offering
-                                    flexibility in design and use.
-                                </li>
-                                <li class="my-3"><b>Attached Pergolas:</b> Designed to extend your living
-                                    space, these pergolas are seamlessly attached to your home, providing a smooth
-                                    transition between indoor and outdoor areas.
-                                </li>
-                                <li class="my-3"><b>Louvered Pergolas:</b> Featuring adjustable louvers, these
-                                    pergolas give you control over sunlight and ventilation, making them ideal for
-                                    year-round use.
-                                </li>
+                                Our pergolas last over 20 years.
                             </div>
                         </div>
                     </div>
@@ -233,9 +223,11 @@
                         <div id="flush-collapseTwo" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                The most popular materials for pergolas in Miami include treated wood, aluminum, vinyl,
-                                and stainless steel. Each material offers different benefits in terms of durability,
-                                maintenance, and aesthetic appeal.
+                                <div>We offer a wide range of sizes:</div>
+                                <li class="my-3"><b>Columns (posts):</b> 3x3, 4x4, 6x6, 8x8</li>
+                                <li class="my-3"><b>Rectangular beams:</b> 2x5, 2x6, 2x8, 2x10, 3x8, 4x12</li>
+                                <div>These beams are available in various thicknesses, including 1/8, 3/16, and 1/4
+                                    inches</div>
                             </div>
                         </div>
                     </div>
@@ -244,16 +236,18 @@
                             <button class="accordion-button collapsed fw-semibold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="true"
                                 aria-controls="flush-collapseThree">
-                                3. How do I choose the best pergola for my yard?
+                                3. Do you offer different colors?
                             </button>
                         </h2>
                         <div id="flush-collapseThree" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                When choosing a pergola, consider factors such as the size of your outdoor space, your
-                                home’s style, the material you prefer, and the level of maintenance required. It’s
-                                important to select a pergola that suits both your functional needs and aesthetic
-                                preferences.
+                                <div>Yes! We provide:</div>
+                                <li class="my-3">8 different colors for ceiling panels</li>
+                                <li class="my-3">4 colors for the structure</li>
+                                <li class="my-3">4 additional colors for WPC composite cladding</li>
+                                <li class="my-3">4 additional colors for aluminum decorative lattice</li>
+                                <div>All these color options are available for viewing in our showroom.</div>
                             </div>
                         </div>
                     </div>
@@ -262,16 +256,14 @@
                             <button class="accordion-button collapsed fw-semibold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="true"
                                 aria-controls="flush-collapseFour">
-                                4. Are pergolas hurricane-resistant?
-
+                                4. What areas do you serve?
                             </button>
                         </h2>
                         <div id="flush-collapseFour" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                Yes, pergolas can be built to withstand hurricanes. It’s recommended to opt for
-                                reinforced structures made from durable materials, especially if you live in areas prone
-                                to tropical storms or hurricanes.
+                                We serve Florida’s east coast, from Palm Beach County to Monroe County, including
+                                Miami-Dade and Broward counties.
                             </div>
                         </div>
                     </div>
@@ -280,16 +272,16 @@
                             <button class="accordion-button collapsed fw-semibold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="true"
                                 aria-controls="flush-collapseFive">
-                                5. What size should a pergola be for my patio?
-
+                                5. Do you offer free estimates?
                             </button>
                         </h2>
                         <div id="flush-collapseFive" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                The size of the pergola should be proportional to the space available in your patio or
-                                garden. A general recommendation is that the pergola covers between 50% and 70% of your
-                                outdoor space for a balanced amount of shade and open area.
+                                Yes, we offer free on-site and virtual estimates. We also encourage potential clients to
+                                visit our showroom to view our pergola kits and designs. If you provide measurements and
+                                photos of your area, we can also offer estimates for kitchens and pergolas.
+                                Additionally, we create 3D designs for outdoor kitchens
                             </div>
                         </div>
                     </div>
@@ -298,15 +290,82 @@
                             <button class="accordion-button collapsed fw-semibold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="true"
                                 aria-controls="flush-collapseSix">
-                                6. How long will my pergola last?
+                                6. How long does the installation take?
                             </button>
                         </h2>
                         <div id="flush-collapseSix" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                The lifespan of a pergola depends on the material used. Aluminum and vinyl pergolas can
-                                last 20 years or more, while wooden ones may require maintenance every 5-10 years. The
-                                harsh climate is an important factor when choosing durable materials.
+                                Pergola installation typically takes less than a week. If combined with a kitchen
+                                installation, the entire process takes approximately 3 weeks.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item shadow border my-3">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed fw-semibold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="true"
+                                aria-controls="flush-collapseSeven">
+                                7. How do your payment terms work?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseSeven" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                We require a 20% deposit of the invoice amount. The remaining balance is collected in
+                                two installments:
+
+                                <li class="my-3">40% when the project is halfway done</li>
+                                <li class="my-3">The final 40% upon completion</li>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item shadow border my-3">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed fw-semibold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseEight" aria-expanded="true"
+                                aria-controls="flush-collapseEight">
+                                8. Do you handle all the electrical work, including devices?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseEight" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Yes, we handle all electrical work. We install LED lights and smart switches, ensuring
+                                everything is connected and functional. Clients can purchase their preferred fans, and
+                                we will install them. We also design the optimal layout for lights and fans, and the
+                                number of lights does not affect the price
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item shadow border my-3">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed fw-semibold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseNine" aria-expanded="true"
+                                aria-controls="flush-collapseNine">
+                                9. Do you obtain permits from the city or county?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseNine" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Yes, we handle all necessary permits for your jurisdiction, managing the entire process,
+                                including inspections.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item shadow border my-3">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed fw-semibold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#flush-collapseNine" aria-expanded="true"
+                                aria-controls="flush-collapseNine">
+                                10. What is the usual waiting time after signing the contract?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseNine" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                The typical waiting time for a pergola is between 2 to 4 weeks.
                             </div>
                         </div>
                     </div>
@@ -369,7 +428,7 @@
     </section>
 
 
-   <footer class="bg-main">
+    <footer class="bg-main">
         <div class="container py-5 px-lg-2 px-md-2 px-4">
             <div class="row">
                 <div class="col-lg-4 col-md-10 mb-lg-0 mb-4">
